--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxt/ui": "^4.0.0",
     "nuxt": "^4.1.2",
+    "nuxt-swiper": "^2.0.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
