--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.0.0",
+    "dayjs-nuxt": "^2.1.11",
     "nuxt": "^4.1.2",
     "nuxt-swiper": "^2.0.1",
     "prettier": "^3.6.2",
