--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "sass": "^1.93.2"
+    "@nuxt/eslint-config": "^1.9.0",
+    "eslint": "^9.37.0",
+    "sass": "^1.93.2",
+    "typescript-eslint": "^8.46.0"
   }
 }
